Wed Jun 16 23:35:13 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c libgamin/gam_data.c libgamin/gam_data.h
	  server/gam_channel.c server/gam_connection.c TODO: Changed
	  the protocol to add an authentication byte from the server
	  to the client at the beginning of the stream and authentication
	  code on the client to check that the server is running under
	  the same user.
	* gamin.spec: generated by configure, removed.

Wed Jun 16 11:55:59 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* TODO libgamin/Makefile.am libgamin/gamin_sym.version: block
	  non-FAM symbols export from shared lib
	* Copyright: reference the AUTHORS and COPYING files.

Tue Jun 15 23:45:50 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* AUTHORS COPYING README: update to reflect the LGPL licence
	  and the inheritance from the marmot code base.

Tue Jun 15 23:25:03 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* README gamin.spec.in: added mail archive URL, 0.0.1-pre1

Tue Jun 15 21:45:20 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* README TODO: I was sure I updated the README before the
	  import... updated the TODO to reflect the current state

Tue Jun 15 21:33:55 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* m4/gthread-supported.m4: still needed for configure.in until
	  one got rid of any thread handling in the server code.