@@ -34,7 +34,7 @@ gamin_fork_server(const char *fam_client_id)
     if (fork() == 0) {
         setsid();
         if (fork() == 0) {
-            setenv("FAM_CLIENT_ID", fam_client_id, 0);
+            setenv("GAM_CLIENT_ID", fam_client_id, 0);
             execl(server_path, server_path, NULL);
             gam_error(DEBUG_INFO, "failed to exec %s\n", server_path);
         }
